fixed the user pic in the navigation bar to display nicer

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -8,16 +8,16 @@ h3, h1{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    /* padding-left: 50px;
-    padding-right: 50px; */
+    padding-left: 50px;
+    padding-right: 50px;
     
 }
 #col2 {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    /* padding-left: 50px;
-    padding-right: 50px;     */
+    padding-left: 50px;
+    padding-right: 50px;    
 }
 
 p, input, label {
