--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -72,7 +72,7 @@
                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
                     {% if user.is_authenticated %}
-                    <input id='favDestBtn' type='button' class="btn btn-primary btn-sm" onclick="saveFavDestination()" value="Save Favourite Destination"> <br>
+                    <input id='favDestBtn' type='button' class="btn btn-primary btn-sm" onclick="saveFavDestination()" value="Save Favourite Destination" style="margin-top: 10px; margin-bottom: 10px;"> <br>
                     <p id='FavDestResult'></p>
                     {% endif %}
                <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
