UI changes to the account page

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -221,3 +221,7 @@ p, input, label {
   #map #infowindow-content {
     display: inline;
   }
+  #fav-route{
+    overflow: scroll;
+    height: 300px;
+  }
