--- a/django_server/dublin_bus/users/templates/users/account.html
+++ b/django_server/dublin_bus/users/templates/users/account.html
@@ -4,8 +4,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-  <div class ="row">
-    <div class="col-md-6">
+    <div class="col-md-12">
       
       <div class="media">
         <img class="rounded-circle account-img" style="height:100px; width:100px; object-fit: cover;" src="{{ user.profile.image.url }}">
@@ -15,10 +14,84 @@
           <!-- <p class="text-secondary">Leap card Balance: {{ user.profile.leap_balance }}</p> -->
           <p class="text-secondary">Leap card Balance: {{ balance }}</p>
         </div>
+      </div>
+</div>
+        <!-- new forms here -->
+        <div class="row">
+        <div class="col-md-6">
+        <form method="POST" enctype="multipart/form-data" novalidate>
+          {% csrf_token %}
+        
+            
+          <fieldset class="form-group">
+              <div class="card">
+                <h3> Account Information</h3>
+                <div class="card-body">
+              {{ user_form|crispy }}
+             
+            </div>
+          </div>
+        </div>
+       
+         
+          <div class="form-group col-md-6" id="fav-route">
+            <div class="card">
+              <h3> Favourite Routes </h3>
+              <p style="padding-left: 15px;">Your favourite routes will be added here.</p>
+              <div>
+              {% for destination in fav_destinations %} 
+              <div> 
+                <ul class="list-group">
+                <li class="list-group-item"><b>{{ destination.name }}<button style='float:right;' class="btn btn-danger btn-sm float-right" id= {{destination.name}} onclick='deleteFavDestination(this.id)'> Delete</button>
+                </li></b>
+                <!-- <input style='float: right;' class="btn btn-danger btn-sm" id= '{{destination.name}}' onclick='deleteFavDestination(this.id)'value="Delete"> -->
+              </ul>
+
+              </div> <br>
+              {% endfor %}
+              <p id='deletion_result'> </p>
+            </div>
+          </div>
+
+        
+        </div>
+      </div>
+        <div class="row">
+            <div class="col-md-6">
+          <div class="card">
+            <h3> Leap Card Account</h3>
+            <div class="card-body">
+          {% if not is_registered  %}
+        <div><p class="text-danger">You have not yet registered your leap card details. Please sign in with your leap-card username and password to get your leap-card information</p></div>
+          {% else %}
+          <div><p class="text-success">Your account has been synced with your leap-card.</p></div>
+             <div><p class="text-success">Fill in your leap card account details and click 'Get Balance' to see
+              your current leap balance, or update your balance.</p></div>
+            
+             
+          
+          {% endif %}
+          
+          {{ account_form|crispy }}
+        
+      </fieldset>
+      <div class = "form-group">
+        <button class="btn btn-warning btn-lg" type="submit" name="account" style="margin-top: 10px;">Update</button>
+        {% if user.profile.leap_username %}
+      <button class="btn btn-primary btn-lg" type="submit" name="balance" style="margin-top: 10px;">Get Balance</button>
+        {% endif %}
     </div>
+    </div>
+          </div>
+       
+     
+      </form>
+   
+  </div>
+  <div class="col-md-6">
     {% if is_registered  %}
-    <h3 class="col-md-12"> Leap Card Details</h3>
     <div class="card">
+      <h3> Leap Card Details</h3>
       <div class="card-body">
     <table class="tabl table-hover" style="overflow: hidden;">
       <tbody>
@@ -55,7 +128,7 @@
           <td>{{ profile.leap_issue_date }}</td>
         </tr>
       </tbody>
-   
+    
       <!-- <div class="card-body">Card Balance: {{ balance }}</div>
       <div class="card-body">Card Number: {{ profile.leap_card_number }}</div>
       <div class="card-body">Card Status: {{ profile.leap_card_status }}</div>
@@ -65,84 +138,12 @@
       <div class="card-body">Expiry date: {{ profile.leap_expiry_date }}</div>
       <div class="card-body">Card Issue Date: {{ profile.leap_issue_date }}</div>
     </div> -->
-  </table>
-  </div>
-  </div>
- <br>
- <h3>Favourite Routes</h3>
-  <div class="card">
-    <div class="card-body">
-      If I had any favourite routes, this is where they would go? 
+    </table>
     </div>
-  </div>
+    </div>
+        {% endif %} 
+      </div>
 </div>
-    {% endif %} 
-  
-        <!-- new forms here -->
-      
-      <div class="row">
-        <div class="col-md-12">
-        <form method="POST" enctype="multipart/form-data" novalidate>
-          {% csrf_token %}
-        
-            
-          <fieldset class="form-group">
-              <h3> Account Information</h3>
-              <div class="card">
-                <div class="card-body">
-              {{ user_form|crispy }}
-             
-            </div>
-          </div>
-          <br>
-              <h3> Leap Card Account</h3>
-              <div class="card">
-                <div class="card-body">
-              {% if not is_registered  %}
-            <div><p class="text-danger">You have not set the leap card details. Set it to get leapcard details</p></div>
-              {% else %}
-              <div><p class="text-success">Your account can be synced with your leap-card.</p></div>
-                 <div><p class="text-success">Fill in your leap card account details and click 'Get Balance' to see
-                  your current leap balance</p></div>
-                
-                
-              
-              {% endif %}
-              
-              {{ account_form|crispy }}
-            
-          </fieldset>
-
-          <div class=form-group>
-            <h3> Favourite Routes </h3>
-            <div class="card">
-              <div>
-              {% for destination in fav_destinations %} 
-              <div> 
-                <span style='margin-left: 5px;'><b>{{ destination.name }} </span></b>
-                <!-- <input style='float: right;' class="btn btn-danger btn-sm" id= '{{destination.name}}' onclick='deleteFavDestination(this.id)'value="Delete"> -->
-                <button style='float: right;' class="btn btn-danger btn-sm" id= {{destination.name}} onclick='deleteFavDestination(this.id)'> Delete</button>
-              </div> <br>
-              {% endfor %}
-              <p id='deletion_result'> </p>
-            </div>
-          </div>
-
-          <div class = "form-group">
-              <button class="btn btn-warning btn-lg" type="submit" name="account">Update</button>
-              {% if user.profile.leap_username %}
-            <button class="btn btn-primary btn-lg" type="submit" name="balance">Get Balance</button>
-              {% endif %}
-          </div>
-        </div>
-      </div>
-      </form>
-   
-      </div>
-    </div>
-      
-    
-    </div>
   <script src="{% static 'bus/js/create_fav_destination.js' %}"></script>
 
 {% endblock content %}
