1 fixed a big bug: in login page the covid table doesn't show data, so removed the covid-info other than main page 2 add admin page simple ui to make admin page beautiful

--- a/django_server/dublin_bus/bus/templates/bus/splash.html
+++ b/django_server/dublin_bus/bus/templates/bus/splash.html
@@ -24,7 +24,7 @@ $(document).ready(function(){
 <div id="splashbackground" style="display:none">
     <div id="splashcontent">
         <h2 class="frame-1">Dublin Bus Project Group 8</h2>
-        <h5 class="frame-2">Powered by Group 8 Members: Ben , CHEN PENG, Sachin Soman, Stacy </h5>
+        <h5 class="frame-2">Powered by Group 8 Members: Ben McCabe, CHEN PENG, Sachin Soman, Stacy Wandrey</h5>
         <h2 class="frame-3">Click Anywhere to Start Your Journey in Dublin!</h2>
     </div>
 </div>
