changed button colour

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -18,7 +18,7 @@
   <div class="tab-content col-md-6">
     <!-- This code is for the journey planner tab -->
     <div id="journey-planner" class="container tab-pane active">
-      <button type="button" class="btn btn-primary" data-toggle="collapse" id="JP-btn">Hide Planner</button>
+      <button type="button" class="btn btn-danger" data-toggle="collapse" id="JP-btn">Click Here to View Map</button>
       <div id="floating-panel" class="card collapse-show col-md-8">
               <h3>Journey Planner </h3>
               <div style="text-align:center; border: 1px solid#252d5a; border-radius: 15px;">
@@ -120,7 +120,7 @@
               </div>
     <!-- This code is for the Tourism tab -->
     <div id="tourism" class="container tab-pane fade">
-      <button type="button" class="btn btn-primary" data-toggle="collapse" id="tourist-btn">Hide Planner</button>
+      <button type="button" class="btn btn-danger" data-toggle="collapse" id="tourist-btn">Hide Planner</button>
       <div class="col-md-12">
        <div class="card col-sm-8 collapse-show" id="tourism-card">
         <h3>Tourism</h3>
