--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -225,3 +225,11 @@ p, input, label {
     overflow: scroll;
     height: 300px;
   }
+  .block {
+    display: block;
+    width: 100%;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+  }
