Fixed some small display issues

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -233,3 +233,8 @@ p, input, label {
     cursor: pointer;
     text-align: center;
   }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
