--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -133,13 +133,13 @@
                 
             <input id="tourist-submit" type="button" onclick="Search_tourist();" class="btn btn-warning block" value="Submit" style="margin-top: 10px; margin-bottom: 10px;">        
             <p><b>Suggested Places:</b></p>
-            <img src="{% static 'Guinness.jpeg' %}" class="img-fluid rounded" alt="Black Gates">
+            <img src="{% static 'Guinness.jpeg' %}" class="img-fluid rounded center" alt="Black Gates">
             <button type="button" class="btn btn-primary block" id="GSH" onclick="Guinness()" value="Submit" style="margin-top: 10px; margin-bottom: 10px;">Take me to the Guinness Factory</button>
-            <img src="{% static 'TCD.jpeg' %}" class="img-fluid rounded" alt="Trinity College">
+            <img src="{% static 'TCD.jpeg' %}" class="img-fluid rounded center" alt="Trinity College">
             <button type="button" class="btn btn-primary block" id="trin_uni" onclick="Trinity()" value="Submit" style="margin-top: 10px; margin-bottom: 10px;">Take me to Trinity College</button>
-            <img src="{% static 'grafton.jpg' %}" class="img-fluid rounded" alt="Grafton Street">
+            <img src="{% static 'grafton.jpg' %}" class="img-fluid rounded center" alt="Grafton Street">
             <button type="button" class="btn btn-primary block" id="Grafton_st" onclick="Grafton()"  value="Submit" style="margin-top: 10px; margin-bottom: 10px;">Take me to Grafton Street</button>
-            <img src="{% static 'NGI.jpeg' %}" class="img-fluid rounded" alt="National Gallery">
+            <img src="{% static 'NGI.jpeg' %}" class="img-fluid rounded center" alt="National Gallery">
             <button type="button" class="btn btn-primary block" id="Nat_gal_Ire" onclick="NGI()"  value="Submit" style="margin-top: 10px; margin-bottom: 10px;">Take me to the National Gallery</button>
           </div>
     </div>
