1. add android app code to this repository + add link to download apk at website foot 2. update requirements.txt and requirements_conda.txt 3. change local test to server test not sure where to put selenium test folder, wait for group meeting to decide

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -96,6 +96,10 @@
     </div>
 <div class="footer-basic">
     <footer>
+        <p class="copyright" style="font-family: Orienta, sans-serif;">
+            <a href="https://drive.google.com/uc?export=download&id=155lVxVywN6jqKysRAM1o6LuyrbkGNmSP">Click to download android application of this website</a>
+            or  scan to download the app  <img  src="{% static 'app.png' %}" width="80" height="80">
+        </p>
         <p class="copyright" style="font-family: Orienta, sans-serif;">Group 8 © 2020</p>
     </footer>
 </div>
