--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -118,11 +118,10 @@
               </div>
     <!-- This code is for the Tourism tab -->
     <div id="tourism" class="container tab-pane fade">
-      <button type="button" class="btn btn-danger" data-toggle="collapse" id="tourist-btn">Hide Planner</button>
+      <button type="button" class="btn btn-danger" data-toggle="collapse" id="tourist-btn">Click Here to View Map</button>
        <div class="collapse-show col-md-8" id="tourism-card">
         <h3>Tourism</h3>
             <h2>Explore Dublin</h2>
-            <p>Click anywhere on the map to be routed to that location.</p>
             <a href="https://www.planetware.com/tourist-attractions-/dublin-irl-db-dub.htm" target="_blank">Need inspiration? Click here for trip ideas</a>
             <p><b>Search for attractions:</b></p>
             <input id="address" onClick="this.select();" type="textbox" class="form-control" placeholder="Enter a location">
