Added meta tags

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -3,6 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Dublin Bus App by Stacy, Sachin, Ben Mcabe, Chen Peng">
+    <meta name="keywords" content="Bus,Dublin Bus, Travel, Tourism, UCD, ">
+    <meta name="author" content="Chen Peng, Ben McCabe, Stacy Wandrey, Sachin Soman">  
     <title>Dublin Bus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">   
     <!-- Jquery file -->
