--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -44,7 +44,7 @@
           <a class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
 
-       {% if 'bus' in request.path or request.path == '/' or request.path == '' %}
+       {% if 'bus' in request.path or request.path == '/' or request.path == '' or 'share' in request.path %}
        <li class="nav-item">
             <a class="nav-link" data-toggle="modal" data-target="#myModal" href="#">Covid-19 Info</a>
        </li>
