--- a/django_server/dublin_bus/users/templates/users/account.html
+++ b/django_server/dublin_bus/users/templates/users/account.html
@@ -4,6 +4,8 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
+
+
     <div class="col-md-12">
       
       <div class="media">
@@ -37,7 +39,7 @@
           <div class="form-group col-md-6" id="fav-route">
             <div class="card">
               <h3> Favourite Routes </h3>
-              <p style="padding-left: 15px;">Your favourite routes will be added here.</p>
+              <p style="padding-left: 15px;">Your favourite routes added will be shown here.</p>
               <div>
               {% for destination in fav_destinations %} 
               <div> 
@@ -62,21 +64,33 @@
             <h3> Leap Card Account</h3>
             <div class="card-body">
           {% if not is_registered  %}
-        <div><p class="text-danger">You have not yet registered your leap card details. Please sign in with your leap-card username and password to get your leap-card information</p></div>
+        <div><p class="text-danger" id = "form_instruction">You have not yet registered your leap card details. Please sign in with your leap-card username and password to get your leap-card information</p></div>
+        <blockquote class="blockquote text-center">
+          <div id="terms_of_use">
+          <p class="mb-0">Terms of use</p>
+          <footer class="text-muted">In order for Leap Card Function to be used the site will store username and password in encrypted format. Accept the condition to use the feature </footer>
+        </blockquote>
+        <div class="text-center">
+        <button class="btn btn-success btn-lg" id="terms_of_use_btn" type="button" onclick="show_form()"  style="margin-top: 10px;">Accept The Terms of Use</button>
+      </div>
+    </div>
           {% else %}
           <div><p class="text-success">Your account has been synced with your leap-card.</p></div>
              <div><p class="text-success">Fill in your leap card account details and click 'Get Balance' to see
               your current leap balance, or update your balance.</p></div>
-            
-             
-          
+              
           {% endif %}
-          
-          {{ account_form|crispy }}
-        
+            <div id = "leap_form">
+                {{ account_form|crispy }}
+            </div>
       </fieldset>
       <div class = "form-group">
-        <button class="btn btn-warning btn-lg" type="submit" name="account" style="margin-top: 10px;">Update</button>
+        {% if is_registered  %}
+        <button class="btn btn-warning btn-lg"  type="submit" name="account" style="margin-top: 10px;">Update</button>
+        {% else %}
+        <button class="btn btn-warning btn-lg" id = "leap_form_register_btn" type="submit" name="account" style="margin-top: 10px;">Register</button>
+        {% endif %}
+
         {% if user.profile.leap_username %}
       <button class="btn btn-primary btn-lg" type="submit" name="balance" style="margin-top: 10px;">Get Balance</button>
         {% endif %}
@@ -145,5 +159,8 @@
       </div>
 </div>
   <script src="{% static 'bus/js/create_fav_destination.js' %}"></script>
+  {% if not is_registered  %}
+  <script src="{% static 'bus/js/user_agreement.js' %}"></script>
+  {% endif %}
 
 {% endblock content %}
