added directions panel functionality to tourist location

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -4,7 +4,7 @@
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item">
-      <a class="nav-link active" data-toggle="tab" href="#journey-planner">Journey Planner</a>
+      <a class="nav-link active" data-toggle="tab" href="#journey-planner" id='journey_planner_nav'>Journey Planner</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" data-toggle="tab" href="#tourism">Tourism</a>
@@ -203,6 +203,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyA0tKPCh7ZSeNURx9Lvn-Y2A
 
 </script>
 <script src="{% static 'bus/js/tourist.js' %}"></script>  
+<script src="{% static 'bus/js/clear_map.js' %}"></script>  
 <script src="{% static 'bus/js/map_auto_complete_text.js' %}"></script>
 <script src="{% static 'bus/js/create_fav_destination.js' %}"></script>
 
