--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -29,7 +29,7 @@
 <nav class="navbar navbar-light navbar-expand-sm d-flex navigation-clean">
     <!-- Brand -->
     
-    <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-bus d-inline-flex p-2" style='color:#ffd633; background-color:#252d5a;'></i>Dublin Bus</a>
+    <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-bus d-inline-flex p-2" style='color:#252d5a; background-color:#ffd11a;'></i>Dublin Bus</a>
   
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler float-left" type="button" data-toggle="collapse" data-target="#menu">
